@@ -20,6 +20,7 @@ EXTRA_DIST = lena1024.pgm lena2048.pgm
 
 noinst_PROGRAMS =				\
   dilation-lena					\
+  dilation-lena-table				\
   gradient-lena					\
   gradient-spe-lena
 
